# desafio-itau

./: .env.sample  Dockerfile  README.md  docker-compose.yml  main.py  makefile  pyproject.toml
app/: server.py
app/core/: config.py  lifespan.py
app/middleware/: rate_limit.py
app/routers/: __init__.py
app/routers/v1/: __init__.py
app/routers/v1/chat/: controller.py  models.py  service.py
app/services/: cache_service.py  circuit_breaker.py  db_service.py  llm_service.py  session_service.py
docker/prometheus/: prometheus.yml
