[project]
name = "desafio-itau"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocache>=0.12.3",
    "fastapi>=0.115.14",
    "fastapi-limiter>=0.1.6",
    "fastapi-utils>=0.8.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=1.93.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.35.0",
]
